# PyTRex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-push.yml
PyTRex/trex/: trex_port.py  trex_stream.py
PyTRex/trex_stl/: trex_stl_hltapi.py  trex_stl_wlc.py
docker/: Dockerfile  create_two_veth  trex_cfg.yaml
examples/: __init__.py  simple.py  stl_path.py  stl_sparta_basic.py
pytrex/: __init__.py  common.py  text_opts.py  trex_app.py  trex_capture.py  trex_object.py  trex_port.py  trex_statistics_view.py  trex_stl_exceptions.py  trex_stl_packet_builder_interface.py  trex_stl_packet_builder_scapy.py  trex_stream.py  zipmsg.py
pytrex/api/: __init__.py  trex_event.py  trex_stl_async_client.py  trex_stl_conn.py  trex_stl_jsonrpc_client.py  trex_stl_types.py
tests/: __init__.py  conftest.py  sut.yaml  test_offline.py  test_offline_old.py  test_trex.py
tests/profiles/: test_profile_0.yaml  test_profile_1.yaml  test_profile_2.yaml  udp_2pkt_simple.yaml  udp_2pkt_simple_gui.yaml
trex/: common.py  text_opts.py  trex_app.py  trex_object.py  trex_port.py  trex_stl_packet_builder_scapy.py  trex_stream.py
trex/api/: trex_stl_conn.py  (+3 more)
trex_stl/: __init__.py  trex_stl_async_client.py  trex_stl_client.py  trex_stl_conn.py  trex_stl_exceptions.py  trex_stl_ext.py  trex_stl_jsonrpc_client.py  trex_stl_packet_builder_scapy.py  trex_stl_port.py  trex_stl_psv.py  trex_stl_sim.py  trex_stl_stats.py  trex_stl_std.py  trex_stl_streams.py  trex_stl_types.py  trex_stl_vlan.py  trex_stl_wlc.py
(+23 files in other folders)
