[metadata]
name = pytrex
description = Python OO API package to manage TRex traffic generator stateless traffic generator
url = https://github.com/shmir/PyTRex
author = Yoram Shamir
author_email = yoram@ignissoft.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
keywords = cisco, trex, l2l3, tg, traffic generator, test automation, automation api
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    scapy
    pytrafficgen>=4.0.0,<4.1.0
    pyyaml
    pyzmq

[options.packages.find]
exclude =
    docs*
    tests*

[mypy]
ignore_missing_imports = True
allow_untyped_calls = True
allow_untyped_defs = True
allow_incomplete_defs = True
follow_imports = skip
no_strict_optional = True
show_error_codes = True
